--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -11,7 +11,7 @@
       color:#4e8fcc ;
 
   }
-.navbar .nav-link.r:hover {
+#navbarDropdown:hover {
     transition: background-color 0.3s ease;
       color: #4e8fcc ;
 
@@ -33,11 +33,18 @@
   <div style="margin-left: 45%" class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a style="color: #4e8fcc" class="nav-link h" href="/">Home <span class="sr-only"></span></a>
+        <a style="color: #4e8fcc" class="nav-link h" href="/">Map <span class="sr-only"></span></a>
       </li>
 
-      <li class="nav-item active">
-        <a class="nav-link r" href="#">Report</a>
+     <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle active " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Reports
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">See reports</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Create new repor</a>
+        </div>
       </li>
         <li class="nav-item active">
         <a class="nav-link p" href="#">Profile</a>
