fixed db stuff that I broke and tried adding login functionality

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -50,7 +50,7 @@
         <a class="nav-link p" href="#">Profile</a>
       </li>
          <li class="nav-item active">
-        <a class="nav-link s" href="#">Sign in</a>
+        <a class="nav-link s" href="{{url_for("login")}}">Sign in</a>
       </li>
 
     </ul>
