--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <!-- This is a Jinja2 template -->
-    {% for user in users %}
-        <h1>{{ user.name }}</h1>
-        <p>{{ user.email }}</p>
-    {% endfor %}
+{#    {% for user in users %}#}
+{#        <h1>{{ user.name }}</h1>#}
+{#        <p>{{ user.email }}</p>#}
+{#    {% endfor %}#}
 </body>
