database working, basic authentication working, restructured the project again
5 HOURS LATER

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -43,14 +43,14 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">See reports</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Create new repor</a>
+          <a class="dropdown-item" href="#">Create new report</a>
         </div>
       </li>
         <li class="nav-item active">
         <a class="nav-link p" href="#">Profile</a>
       </li>
          <li class="nav-item active">
-        <a class="nav-link s" href="{{url_for("login")}}">Sign in</a>
+        <a class="nav-link s" href="{{url_for("show_login")}}">Sign in</a>
       </li>
 
     </ul>
