--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,7 +7,7 @@
     <body>
 
         <h1>Login Page (to be done)</h1>
-        <form action="user/login" method="POST">
+        <form action="/login/1" method="POST">
             <input type="firstname" name="first_name" placeholder="First Name">
             <input type="lastname" name="last_name" placeholder="Last Name">
             <input type="email" name="email" placeholder="Email">
