Authentication functionality added
Users can register, login and logout but some redirection functionality missing

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,13 +7,11 @@
     <body>
 
         <h1>Login Page (to be done)</h1>
-        <form action="/login/1" method="POST">
-            <input type="firstname" name="first_name" placeholder="First Name">
-            <input type="lastname" name="last_name" placeholder="Last Name">
-            <input type="email" name="email" placeholder="Email">
-            <input type="password" name="password" placeholder="Password">
-            <button type="submit" value="login">Login</button>
-        </form>
+        <form action="{{ url_for('login') }}" method = "POST">
+        <input type="text" name="username" placeholder="Username", required="required">
+        <input type="password" name="password" placeholder="Password", required="required">
+        <input type="submit" value="Login">
+    </form>
 
         <h2> <a href="{{ url_for('register') }}"> Don't have an account? Register here</a> </h2>
     </body>
