--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -50,7 +50,11 @@
         <a class="nav-link p" href="#">Profile</a>
       </li>
          <li class="nav-item active">
-        <a class="nav-link s" href="{{url_for("show_login")}}">Sign in</a>
+             {% if current_user.is_authenticated %}
+                <a class="nav-link s" href="{{url_for("logout")}}">Sign out</a>
+             {% else %}
+                <a class="nav-link s" href="{{url_for("login")}}">Sign in</a>
+             {% endif %}
       </li>
 
     </ul>
