--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <title>Register Page</title>
 </head>
+
 <body>
-<h1>Register Page (to be done)</h1>
+<h1>Register Page</h1>
+    <form action="{{ url_for('register') }}" method = "POST">
+        <input type="text" name="username" placeholder="Username", required="required">
+        <input type="password" name="password" placeholder="Password", required="required">
+        <input type="text" name="email", placeholder="Email", required="required">
+
+        <input type="submit" value="Register">
+    </form>
 </body>
 </html>
