--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <title>Main Page</title>
     <style>
 
@@ -51,41 +51,92 @@
 </nav>
 
 <div id = "map" style = "width: 100%; height: 605px"></div>
-<script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <script>
+    var reports = [];
+    {% for report in reports %}
+        var reportdet = {
+            id: "{{ report.id }}",
+            location: "{{ report.location }}",  // If location is a string like "lat,lng"
+            description: "{{ report.description }}",
+            photo_file: "{{ report.photo_file if report.photo_file else '' }}"
+        };
+        reports.push(reportdet);
+    {% endfor %}
+
     var mapOptions = {
                     center: [47, 14.3738],
                     zoom: 7
                  }
-                 var map = L.map('map').setView([47.5, 13.5], 7);
+    var map = L.map('map').setView([47.5, 13.5], 7);
 
     // OpenStreetMap as a base map
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    var basemap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
     // A layer from open government database
-    L.tileLayer.wms("https://gis.lfrz.gv.at/wmsgw/?key=460276c6b17d485ea29604196d48fb5a&service=WMS&version=1.3.0&request=GetLegendGraphic&format=image%2Fpng&width=20&height=20&layer=pegelaktuell", {
+    var waterlevels = L.tileLayer.wms("https://gis.lfrz.gv.at/wmsgw/?key=460276c6b17d485ea29604196d48fb5a&service=WMS&version=1.3.0&request=GetLegendGraphic&format=image%2Fpng&width=20&height=20&layer=pegelaktuell", {
             layers: 'pegelaktuell',
             format: 'image/png',
             transparent: true,
 
         }).addTo(map);
+
+    var reportLayer = L.layerGroup().addTo(map);
+    // Create markers
+
+    reports.forEach(function (report) {
+    if (report.location) {
+        var coords = report.location.split(',');
+        var lat = parseFloat(coords[0]);
+        var lng = parseFloat(coords[1]);
+
+        if (!isNaN(lat) && !isNaN(lng)) {
+            L.marker([lat, lng]).addTo(reportLayer)
+             .bindPopup(`
+                <strong>Description:</strong> ${report.description}<br>
+                <strong>Location:</strong> ${lat}, ${lng}
+            `);
+
+        }
+    }
+});
+
+
     // Legend
     var legend = L.control({ position: 'bottomright' });
     legend.onAdd = function (map) {
     var div = L.DomUtil.create('div', 'info legend');
     div.style.backgroundColor = 'white';
-    div.style.padding = '5px'
+    div.style.padding = '20px'
     div.innerHTML = `
       <strong>Legend</strong><br>
-      <img src="https://gis.lfrz.gv.at/wmsgw/?key=460276c6b17d485ea29604196d48fb5a&service=WMS&version=1.3.0&request=GetLegendGraphic&format=image%2Fpng&width=100&height=100&layer=pegelaktuell" alt="Legend" />
-<span>pegelaktuell</span>
+      <img src="https://gis.lfrz.gv.at/wmsgw/?key=460276c6b17d485ea29604196d48fb5a&service=WMS&version=1.3.0&request=GetLegendGraphic&format=image%2Fpng&width=10&height=30&layer=pegelaktuell" alt="Legend" />
+<span>Water levers</span>
+<br>
+<img src="static/marker-icon.png" alt="Report Icon" width="13" height="20" >
+               <span>Flood report</span>
     `;
+
     return div;
   };
   legend.addTo(map);
+  var baseMaps = {
+        "OpenStreetMap": basemap,
+    };
+
+    var overlayMaps = {
+        "Flood Reports": reportLayer,
+        "Water Levels": waterlevels
+    };
+
+    // Layer control
+    L.control.layers(baseMaps, overlayMaps).addTo(map);
+
+    // Set the default map layer
+    basemap.addTo(map);
 
 </script>
 </body>
