--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -5,141 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
     <title>Main Page</title>
     <style>
-
-.navbar .nav-link.l:hover {
-    transition: background-color 0.3s ease;
-      color: #4e8fcc ;
-
-  }
-
+        .navbar .nav-link.l:hover {
+            transition: background-color 0.3s ease;
+            color: #4e8fcc;
+        }
     </style>
 </head>
 
 <body>
 <nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <div style="margin-left: 10%; margin-right: 40% " class="navbar-brand" href="#"><span style="font-weight: bold">AFM</span> <br>
-      <span style="color: #545252; ">Austrian Flood Monitoring System</span></div>
-
+  <div style="margin-left: 10%; margin-right: 40%" class="navbar-brand">
+      <span style="font-weight: bold">AFM</span><br>
+      <span style="color: #545252;">Austrian Flood Monitoring System</span>
+  </div>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div  class="collapse navbar-collapse m-2" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse m-2" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item active">
-        <a style="color: #4e8fcc;   background-color: #d7e1f3"   class="nav-link " href="{{ url_for("mainpage")}}">Map <span class="sr-only"></span></a>
+        <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link" href="{{ url_for('mainpage') }}">Map</a>
       </li>
-
       <li class="nav-item active">
-        <a class="nav-link l" href="{{url_for("view_reports" )}}">Report</a>
+        <a class="nav-link l" href="{{ url_for('create_report') }}">Report</a>
       </li>
-        <li class="nav-item active">
+      <li class="nav-item active">
         <a class="nav-link l" href="#">Profile</a>
       </li>
-         <li class="nav-item active">
-          {% if current_user.is_authenticated %}
-          <a class="nav-link s" href="{{url_for("logout")}}">Sign out</a>
-          {% else %}
-          <a class="nav-link s" href="{{url_for("login")}}">Sign in</a>
-          {% endif %}
+      <li class="nav-item active">
+        {% if current_user.is_authenticated %}
+          <a class="nav-link s" href="{{ url_for('logout') }}">Sign out</a>
+        {% else %}
+          <a class="nav-link s" href="{{ url_for('login') }}">Sign in</a>
+        {% endif %}
       </li>
-
     </ul>
   </div>
 </nav>
+<div id="map" style="width: 100%; height: 605px"></div>
 
-<div id = "map" style = "width: 100%; height: 605px"></div>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+
 <script>
     var reports = [];
     {% for report in reports %}
         var reportdet = {
             id: "{{ report.id }}",
-            location: "{{ report.location }}",  // If location is a string like "lat,lng"
+            location: "{{ report.location }}",
             description: "{{ report.description }}",
             photo_file: "{{ report.photo_file if report.photo_file else '' }}"
         };
         reports.push(reportdet);
     {% endfor %}
 
-    var mapOptions = {
-                    center: [47, 14.3738],
-                    zoom: 7
-                 }
-    var map = L.map('map').setView([47.5, 13.5], 7);
-
-    // OpenStreetMap as a base map
-    var basemap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-            attribution: '&copy; OpenStreetMap contributors'
-        }).addTo(map);
-
-    // A layer from open government database
-    var waterlevels = L.tileLayer.wms("https://gis.lfrz.gv.at/wmsgw/?key=460276c6b17d485ea29604196d48fb5a&service=WMS&version=1.3.0&request=GetLegendGraphic&format=image%2Fpng&width=20&height=20&layer=pegelaktuell", {
-            layers: 'pegelaktuell',
-            format: 'image/png',
-            transparent: true,
-
-        }).addTo(map);
-
-    var reportLayer = L.layerGroup().addTo(map);
-    // Create markers
-
-    reports.forEach(function (report) {
-    if (report.location) {
-        var coords = report.location.split(',');
-        var lat = parseFloat(coords[0]);
-        var lng = parseFloat(coords[1]);
-
-        if (!isNaN(lat) && !isNaN(lng)) {
-            L.marker([lat, lng]).addTo(reportLayer)
-             .bindPopup(`
-                <strong>Description:</strong> ${report.description}<br>
-                <strong>Location:</strong> ${lat}, ${lng}
-            `);
-
-        }
-    }
-});
-
-
-    // Legend
-    var legend = L.control({ position: 'bottomright' });
-    legend.onAdd = function (map) {
-    var div = L.DomUtil.create('div', 'info legend');
-    div.style.backgroundColor = 'white';
-    div.style.padding = '20px'
-    div.innerHTML = `
-      <strong>Legend</strong><br>
-      <img src="https://gis.lfrz.gv.at/wmsgw/?key=460276c6b17d485ea29604196d48fb5a&service=WMS&version=1.3.0&request=GetLegendGraphic&format=image%2Fpng&width=10&height=30&layer=pegelaktuell" alt="Legend" />
-<span>Water levers</span>
-<br>
-<img src="static/marker-icon.png" alt="Report Icon" width="13" height="20" >
-               <span>Flood report</span>
-    `;
-
-    return div;
-  };
-  legend.addTo(map);
-  var baseMaps = {
-        "OpenStreetMap": basemap,
-    };
-
-    var overlayMaps = {
-        "Flood Reports": reportLayer,
-        "Water Levels": waterlevels
-    };
-
-    // Layer control
-    L.control.layers(baseMaps, overlayMaps).addTo(map);
-
-    // Set the default map layer
-    basemap.addTo(map);
-
 </script>
-</body>
-
+<script src="{{ url_for('static', filename='scripts/mainpage_user.js') }}"></script> <!-- based on location displayes reports -->
+<!-- <script src="{{ url_for('static', filename='scripts/mainpage_manager.js') }}"></script> displayes all reports -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
 </html>
