--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,12 +7,12 @@
     <body>
 
         <h1>Login Page (to be done)</h1>
-        <form action="{{ url_for('login') }}" method = "POST">
+        <form action="{{url_for('auth.login') }}" method = "POST">
         <input type="text" name="username" placeholder="Username", required="required">
         <input type="password" name="password" placeholder="Password", required="required">
         <input type="submit" value="Login">
     </form>
 
-        <h2> <a href="{{ url_for('register') }}"> Don't have an account? Register here</a> </h2>
+        <h2> <a href="{{ url_for('auth.register') }}"> Don't have an account? Register here</a> </h2>
     </body>
 </html>
