--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -28,19 +28,27 @@
   <div class="collapse navbar-collapse m-2" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item active">
-        <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link" href="{{ url_for('mainpage') }}">Map</a>
+        <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link" href="{{ url_for('main.mainpage') }}">Map</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link l" href="{{ url_for('create_report') }}">Report</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link l" href="#">Profile</a>
-      </li>
-      <li class="nav-item active">
         {% if current_user.is_authenticated %}
-          <a class="nav-link s" href="{{ url_for('logout') }}">Sign out</a>
+        <li class="nav-item active">
+          <a class="nav-link l" href="{{ url_for('report.create_report') }}">Report</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link l" href="#">Profile</a>
+        </li>
+        {% endif %}
+        
+        {% if current_user.is_owner %}
+          <a class="nav-link s" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
+        {% endif %}
+      
+        <li class="nav-item active">
+        {% if current_user.is_authenticated %}
+        <a class="nav-link s" href="{{ url_for('auth.logout') }}">Sign out</a>
+          
         {% else %}
-          <a class="nav-link s" href="{{ url_for('login') }}">Sign in</a>
+          <a class="nav-link s" href="{{ url_for('auth.login') }}">Sign in</a>
         {% endif %}
       </li>
     </ul>
