--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -51,9 +51,9 @@
       </li>
          <li class="nav-item active">
              {% if current_user.is_authenticated %}
-                <a class="nav-link s" href="{{url_for("logout")}}">Sign out</a>
+                <a class="nav-link s" href="{{url_for("auth.logout")}}">Sign out</a>
              {% else %}
-                <a class="nav-link s" href="{{url_for("login")}}">Sign in</a>
+                <a class="nav-link s" href="{{url_for("auth.login")}}">Sign in</a>
              {% endif %}
       </li>
 
