--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Register Page</h1>
-    <form action="{{ url_for('register') }}" method = "POST">
+    <form action="{{ url_for('auth.register') }}" method = "POST">
         <input type="text" name="username" placeholder="Username", required="required">
         <input type="password" name="password" placeholder="Password", required="required">
         <input type="text" name="email", placeholder="Email", required="required">
