--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -30,17 +30,17 @@
   <div  class="collapse navbar-collapse m-2" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item active">
-        <a class="nav-link " href="{{ url_for("mainpage")}}">Map <span class="sr-only"></span></a>
+        <a class="nav-link " href="{{ url_for("main.mainpage")}}">Map <span class="sr-only"></span></a>
       </li>
 
       <li class="nav-item active">
-        <a style="color: #4e8fcc;   background-color: #d7e1f3"  class="nav-link l" href="{{url_for("create_report" )}}">Report</a>
+        <a style="color: #4e8fcc;   background-color: #d7e1f3"  class="nav-link l" href="{{url_for("report.create_report" )}}">Report</a>
       </li>
         <li class="nav-item active">
         <a class="nav-link l" href="#">Profile</a>
       </li>
          <li class="nav-item active">
-        <a class="nav-link l" href="{{url_for("login")}}">Sign in</a>
+        <a class="nav-link l" href="{{url_for("auth.login")}}">Sign in</a>
       </li>
 
     </ul>
