--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -17,6 +17,22 @@
 </head>
 
 <body>
+<div class="modal fade" id="signInModal" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+          <h6>Sigh in</h6>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+          <h6 >Choose how you'd like to sign in:</h6>
+        <a href="{{ url_for('auth.register') }}" class="btn btn-dark m-2">As Public User</a>
+        <a href="{{ url_for('auth.register_owner') }}" class="btn btn-dark m-2">As Organization Owner</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div style="margin-left: 10%; margin-right: 40%" class="navbar-brand">
       <span style="font-weight: bold">AFM</span><br>
@@ -34,21 +50,23 @@
         <li class="nav-item active">
           <a class="nav-link l" href="{{ url_for('report.create_report') }}">Report</a>
         </li>
+        {% endif %}
+         {% if current_user.agent or current_user.manager  %}
         <li class="nav-item active">
           <a class="nav-link l" href="#">Profile</a>
         </li>
         {% endif %}
-        
+
         {% if current_user.is_owner %}
-          <a class="nav-link s" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
+          <a class="nav-link l" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
         {% endif %}
       
         <li class="nav-item active">
         {% if current_user.is_authenticated %}
-        <a class="nav-link s" href="{{ url_for('auth.logout') }}">Sign out</a>
+        <a class="nav-link l" href="{{ url_for('auth.logout') }}">Sign out</a>
           
         {% else %}
-          <a class="nav-link s" href="{{ url_for('auth.login') }}">Sign in</a>
+          <a class="nav-link l" href="#" data-bs-toggle="modal" data-bs-target="#signInModal">Sign in</a>
         {% endif %}
       </li>
     </ul>
@@ -60,6 +78,7 @@
 <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
 
 <script>
+
     var reports = [];
     {% for report in reports %}
         var reportdet = {
@@ -72,8 +91,11 @@
     {% endfor %}
 
 </script>
+{% if current_user.agent or current_user.manager  %}
+<script src="{{ url_for('static', filename='scripts/mainpage_manager.js') }}"></script>
+{% else %}
 <script src="{{ url_for('static', filename='scripts/mainpage_user.js') }}"></script> <!-- based on location displayes reports -->
-<!-- <script src="{{ url_for('static', filename='scripts/mainpage_manager.js') }}"></script> displayes all reports -->
+{% endif %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
