--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -3,16 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Register Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script type="text/javascript">
+        // Trigger alert if alert_message exists
+        {% if alert_message %}
+            alert("{{ alert_message }}");
+             {% if redirect_to %}
+                window.location.href = "{{ url_for('auth.login')}}";
+            {% endif %}
+        {% endif %}
+    </script>
+<style>
+        .navbar .nav-link.l:hover {
+            transition: background-color 0.3s ease;
+            color: #4e8fcc;
+        }
+    </style>
 </head>
 
 <body>
-<h1>Register Page</h1>
-    <form action="{{ url_for('auth.register') }}" method = "POST">
-        <input type="text" name="username" placeholder="Username", required="required">
-        <input type="password" name="password" placeholder="Password", required="required">
-        <input type="text" name="email", placeholder="Email", required="required">
+<nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <div style="margin-left: 10%; margin-right: 40%" class="navbar-brand">
+      <span style="font-weight: bold">AFM</span><br>
+      <span style="color: #545252;">Austrian Flood Monitoring System</span>
+  </div>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse m-2" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item active">
+        <a  class="nav-link l" href="{{ url_for('main.mainpage') }}">Map</a>
+      </li>
+        <li class="nav-item active">
 
-        <input type="submit" value="Register">
+          <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link " href="{{ url_for('auth.login') }}">Sign in</a>
+
+      </li>
+    </ul>
+  </div>
+</nav>
+<div  class="container-fluid" style="padding-right: 20%; padding-left: 20%; padding-top: 20px">
+    <form id = "registerForm" class ="border rounded p-3" method="POST" action="{{ url_for('auth.register') }}" enctype="multipart/form-data">
+         <h4 style="text-align: center;">Register to have more features</h4>
+    <div class="mb-3">
+      <label for="username" class="form-label">Username</label>
+      <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username", required="required">
+    </div>
+    <br>
+    <div class="mb-3">
+  <label for="password" class="form-label">Password</label>
+   <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password", required="required">
+    </div>
+        <br>
+      <div class="mb-3">
+  <label for="email" class="form-label">Email</label>
+   <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email", required="required">
+    </div>
+  <button type="submit" class="btn btn-dark d-block mx-auto">Register</button>
+        <br>
+           <div style=" text-align: center;">
+    <a href="{{ url_for('auth.login') }}">Already have account? Log in here</a>
+</div>
     </form>
+</div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
