--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -22,6 +22,21 @@
 </head>
 
 <body>
+<div class="modal fade" id="signInModal" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+          <h6>Sigh in</h6>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+          <h6 >Choose how you'd like to sign in:</h6>
+        <a href="{{ url_for('auth.register') }}" class="btn btn-dark m-2">As Public User</a>
+        <a href="{{ url_for('auth.register_owner') }}" class="btn btn-dark m-2">As Organization Owner</a>
+      </div>
+    </div>
+  </div>
+</div>
 <nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div style="margin-left: 10%; margin-right: 40%" class="navbar-brand">
       <span style="font-weight: bold">AFM</span><br>
@@ -37,7 +52,7 @@
       </li>
         <li class="nav-item active">
 
-          <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link " href="{{ url_for('auth.login') }}">Sign in</a>
+          <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link l" href="{{ url_for('auth.login') }}">Log in</a>
 
       </li>
     </ul>
@@ -61,7 +76,7 @@
   <button type="submit" class="btn btn-dark d-block mx-auto">Login</button>
         <br>
       <div style=" text-align: center;">
-    <a href="{{ url_for('auth.register') }}">Don't have an account? Register here</a>
+    <a href="{{ url_for('auth.register') }}" data-bs-toggle="modal" data-bs-target="#signInModal">Don't have an account? Register here</a>
 </div>
 
     </form>
