--- a/src/templates/register_owner.html
+++ b/src/templates/register_owner.html
@@ -37,7 +37,7 @@
       </li>
         <li class="nav-item active">
 
-          <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link " href="{{ url_for('auth.login') }}">Sign in</a>
+         <a class="nav-link l" href="{{ url_for('auth.login') }}">Log in</a>
 
       </li>
     </ul>
