--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -39,9 +39,12 @@
         <li class="nav-item active">
         <a class="nav-link l" href="#">Profile</a>
       </li>
-         <li class="nav-item active">
-        <a class="nav-link l" href="{{url_for("auth.login")}}">Sign in</a>
-      </li>
+        {% if current_user.is_authenticated %}
+        <a class="nav-link l" href="{{ url_for('auth.logout') }}">Sign out</a>
+
+        {% else %}
+          <a class="nav-link l" href="{{ url_for('auth.login') }}">Log in</a>
+        {% endif %}
 
     </ul>
   </div>
