--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -9,55 +9,32 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
     <title>Main Page</title>
     <style>
-        .navbar .nav-link.l:hover {
-            transition: background-color 0.3s ease;
-            color: #4e8fcc;
+        .navbar .nav-link.m {
+          color: #4e8fcc; background-color: #d7e1f3
+        }
+         html, body {
+            height: 100%;
+            margin: 0;
+        }
+        #map {
+            width: 100%;
+            height: 90%;
         }
     </style>
 </head>
 
 <body>
-
-<nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <div style="margin-left: 10%; margin-right: 40%" class="navbar-brand">
-      <span style="font-weight: bold">AFM</span><br>
-      <span style="color: #545252;">Austrian Flood Monitoring System</span>
-  </div>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse m-2" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item active">
-        <a style="color: #4e8fcc; background-color: #d7e1f3" class="nav-link" href="{{ url_for('main.mainpage') }}">Map</a>
-      </li>
-        {% if current_user.is_authenticated and not current_user.agent and not  current_user.manager and not current_user.is_owner%}
-        <li class="nav-item active">
-          <a class="nav-link l" href="{{ url_for('report.create_report') }}">Report</a>
-        </li>
+{% include "navbar.html" %}
+<div class="container mt-4">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="alert alert-{{ messages[0][0] }} mt-3">
+                {{ messages[0][1] }}
+            </div>
         {% endif %}
-         {% if current_user.is_authenticated%}
-        <li class="nav-item active">
-          <a class="nav-link l" href="#">Profile</a>
-        </li>
-        {% endif %}
-
-        {% if current_user.is_owner %}
-          <a class="nav-link l" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
-        {% endif %}
-      
-        <li class="nav-item active">
-        {% if current_user.is_authenticated %}
-        <a class="nav-link l" href="{{ url_for('auth.logout') }}">Sign out</a>
-          
-        {% else %}
-          <a class="nav-link l" href="{{ url_for('auth.login') }}">Log in</a>
-        {% endif %}
-      </li>
-    </ul>
-  </div>
-</nav>
-<div id="map" style="width: 100%; height: 605px"></div>
+    {% endwith %}
+</div>
+<div id="map"></div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
@@ -76,9 +53,12 @@
     {% endfor %}
 
 </script>
+
 {% if current_user.agent or current_user.manager or current_user.is_owner %}
 <script src="{{ url_for('static', filename='scripts/mainpage_manager.js') }}"></script>
-{% else %}
+{% elif current_user.is_authenticated %}
+    <script src="{{ url_for('static', filename='scripts/mainpage_registered.js') }}"></script>
+    {% else %}
 <script src="{{ url_for('static', filename='scripts/mainpage_user.js') }}"></script> <!-- based on location displayes reports -->
 {% endif %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
