--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -7,48 +7,24 @@
     <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <title>Main Page</title>
     <style>
-
-.navbar .nav-link.l:hover {
-    transition: background-color 0.3s ease;
-      color: #4e8fcc ;
-
-  }
-
+     .navbar .nav-link.r {
+          color: #4e8fcc; background-color: #d7e1f3
+        }
 
     </style>
 </head>
 
 <body>
-<nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <div style="margin-left: 10%; margin-right: 40% " class="navbar-brand" href="#"><span style="font-weight: bold">AFM</span> <br>
-      <span style="color: #545252; ">Austrian Flood Monitoring System</span></div>
-
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div  class="collapse navbar-collapse m-2" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link " href="{{ url_for("main.mainpage")}}">Map <span class="sr-only"></span></a>
-      </li>
-
-      <li class="nav-item active">
-        <a style="color: #4e8fcc;   background-color: #d7e1f3"  class="nav-link l" href="{{url_for("report.create_report" )}}">Report</a>
-      </li>
-        <li class="nav-item active">
-        <a class="nav-link l" href="#">Profile</a>
-      </li>
-        {% if current_user.is_authenticated %}
-        <a class="nav-link l" href="{{ url_for('auth.logout') }}">Sign out</a>
-
-        {% else %}
-          <a class="nav-link l" href="{{ url_for('auth.login') }}">Log in</a>
+{% include "navbar.html" %}
+<div class="container mt-4">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="alert alert-{{ messages[0][0] }} mt-3">
+                {{ messages[0][1] }}
+            </div>
         {% endif %}
-
-    </ul>
-  </div>
-</nav>
+    {% endwith %}
+</div>
 <div  class="container-fluid" style="padding-right: 10%; padding-left: 10%; padding-top: 20px">
 <form id = "reportForm" class ="border rounded p-3" method="POST" action="{{ url_for('report.create_report') }}" enctype="multipart/form-data">
     <div class="mb-3">
