Mistake with user role changing fixed

--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -43,7 +43,7 @@
 
     var reports = [];
     {% for report in reports %}
-        {% if report.approver_id %}
+        {% if report.is_approved %}
             var reportdet = {
             id: "{{ report.id }}",
             location: "{{ report.location }}",
