--- a/src/templates/report_details.html
+++ b/src/templates/report_details.html
@@ -49,7 +49,7 @@
 
     </div>
           <div class="col">
-    {% if not report.approver_id %}
+    {% if not report.is_approved %}
     <form method="POST" class="me-3">
         <button type="submit" name="action" value="approve" class="btn btn-dark btn-lg">Approve</button>
     </form>
