--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -26,7 +26,7 @@
         {% endif %}
          {% if current_user.is_authenticated%}
         <li class="nav-item active">
-          <a class="nav-link p" href="#">Profile</a>
+          <a class="nav-link p" href="{{ url_for('auth.profile', username=current_user.username) }}">Profile</a>
         </li>
         {% endif %}
 
