Fixed problems with report managing, superadmin issues, unapproved reports are now displaying correctly. Also added all the previous features to manager main page.

--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -55,7 +55,8 @@
             location: "{{ report.location }}",
             description: "{{ report.description }}",
             photo_file: "{{ report.photo_file if report.photo_file else '' }}",
-                creator_id:"{{ report.creator_id }}"
+                creator_id:"{{ report.creator_id }}",
+                 is_approved:"{{ report.is_approved }}"
         };
         reports.push(reportdet);
     {% endfor %}
